Synced by Front Matter

--- a/_posts/2024-05-02-modernauth-01.md
+++ b/_posts/2024-05-02-modernauth-01.md
@@ -67,7 +67,7 @@ O Basic Authentication é o sistema de autenticação mais comum do protocolo HT
 
 How it works:
 
-![Basic Auth Flow](./images/s1/basicAuth-Flow.png)
+![Basic Auth Flow](../assets/images/s1/basicAuth-Flow.png)
 
 1. Quando um usuário tenta acessar um recurso protegido, ele é solicitado a fornecer um nome de usuário e uma senha.
 
@@ -101,7 +101,7 @@ A Digest Authentication, conforme definida na [RFC 7616](https://datatracker.iet
 
 Ela é usada para confirmar a identidade de um usuário antes de enviar informações sensíveis, como o histórico de transações bancárias online. **Diferentemente do Basic Authentication esse metódo calcula o HASH do usuário e senha antes de enviar ao site.** 
 
-![Digest Auth Flow](./images/s1/digestAuth-Flow.png)
+![Digest Auth Flow](../assets/images/s1/digestAuth-Flow.png)
 
 Hashing e Nonce: A autenticação Digest aplica uma função hash ao nome de usuário e à senha antes de enviá-los pela rede.
     
@@ -133,7 +133,7 @@ Fontes:
 
 O NTLM (NT LAN Manager) é um protocolo de autenticação desafio-resposta usado em sistemas Windows. 
 
-![NTLM Flow](./images/s1/NTLM-Flow.png)
+![NTLM Flow](../assets/images/s1/NTLM-Flow.png)
 
 1. Protocolo NTLM:
     * O NTLM inclui várias versões, como LAN Manager versão 1 e 2, e NTLM versão 1 e 2.
