Synced by Front Matter

--- a/_posts/2024-05-02-modernauth-01.md
+++ b/_posts/2024-05-02-modernauth-01.md
@@ -2,7 +2,7 @@
 title: Modern Authentication - Conceitos
 description: "Modern Authentication - Autorização e Autenticação: conceitos e aplicações na plataforma Entra ID (Parte 1 de 6)"
 date: 2024-05-02T17:39:13.275Z
-preview: ""
+preview: /images/MAuth01-Cover.png
 tags:
     - Introdução
     - OAuth
@@ -42,7 +42,7 @@ O artigo foi divido em 6 seções:
 
 
 ### Conceitos de Autenticação e Autorização
-A Autenticação(AuthN) é o processo de identitificar o agente, ou seja responder a perguntar "Who are you?".
+A Autenticação(AuthN) é o processo de identificar o agente, ou seja responder a perguntar "Who are you?".
 
 Já o processo de Autorização(AuthZ) é a validação se o agente tem da permissão de acesso aos recursos solicitados, "Can you do that?".
 
@@ -64,7 +64,7 @@ O Basic Authentication é o sistema de autenticação mais "básico / comum" do 
 
 How it works:
 
-![Basic Auth Flow](../assets/images/s1/basicAuth-Flow.png)
+![Basic Auth Flow, onde o cliente requisita acesso a pagina home e o servidor retornar o HTTP Code 401 de não autorizado solicitando a autenticação para o realm localhost. O cliente com essa informação captura as informações para autenticação e envia novamente a requisição com o header Authorization preenchido com Basic seguido do usuário e senha em Base64](../assets/images/s1/basicAuth-Flow.png)
 
 1. Quando um usuário tenta acessar um recurso protegido ele recebe um retorno do servidor com o código HTTP 401 (Unauthorized) e um cabeçalho WWW-Authenticate, que fornece informações sobre como se autenticar.
 
@@ -94,9 +94,9 @@ Fontes:
 
 
 ### Digest Authentication
-A Digest Authentication, conforme definida na [RFC 2617](https://datatracker.ietf.org/doc/html/rfc2617), é um método pelo qual um servidor da web pode negociar credenciais, como nome de usuário ou senha, com o navegador da web de um usuário bem similar ao BASIC Authentication conform vimos anteriormente porém **diferentemente do Basic Authentication esse metódo calcula o HASH do usuário e senha antes de enviar ao site.** 
+A Digest Authentication, conforme definida na [RFC 2617](https://datatracker.ietf.org/doc/html/rfc2617), é um método pelo qual um servidor da web pode negociar credenciais, como nome de usuário ou senha, com o navegador da web de um usuário bem similar ao BASIC Authentication conform vimos anteriormente porém **diferentemente do Basic Authentication esse método calcula o HASH do usuário e senha antes de enviar ao site.** 
 
-![Digest Auth Flow](../assets/images/s1/digestAuth-Flow.png)
+![Digest Auth Flow, o navegador solicita o acesso a uma página, o servidor retorna solicitando a autenticação do usuário. O navegador captura as informações de autenticação do usuário e devolve ao webserver qual irá validar essa autenticação em um DC autorizando o acesso](../assets/images/s1/digestAuth-Flow.png)
 
 **Processo de Autenticação:**
 1. O cliente faz uma solicitação de acesso.
@@ -123,7 +123,7 @@ Fontes:
 
 O NTLM (NT LAN Manager) é um protocolo de autenticação baseado em desafio-resposta. 
 
-![NTLM Flow](../assets/images/s1/NTLM-Flow.png)
+![NTLM Flow onde o usuário solicita acesso a um recurso porém o servidor do recurso gera um challenge e devolve para o cliente qual irá usar esse challenge para calcular o hash e enviar para o servidor do recurso poder validar o usuário](../assets/images/s1/NTLM-Flow.png)
 
 1. Protocolo NTLM:
     * O NTLM inclui várias versões, como LAN Manager versão 1 e 2, e NTLM versão 1 e 2.
@@ -138,7 +138,7 @@ O NTLM (NT LAN Manager) é um protocolo de autenticação baseado em desafio-res
 1. Aplicações Atuais:
     * O NTLM ainda é usado para autenticação em sistemas configurados como membros de um workgroup.
     * Também é usado para autenticação de logon local em servidores que não são controladores de domínio.
-    * Apesar da recomendação no uso do Keberos como o método preferencial, aplicações podem fazer o uso do NTLM para autenticar seus usua'rios
+    * Apesar da recomendação no uso do Keberos como o método preferencial, aplicações podem fazer o uso do NTLM para autenticar seus usuários
     
 Em resumo, o NTLM é um protocolo de autenticação legado que deve ser usado com cautela, considerando suas limitações e riscos de segurança.
 
@@ -152,7 +152,7 @@ Fontes:
 
 O Kerberos é um protocolo de autenticação de rede desenvolvido pelo Massachusetts Institute of Technology (MIT) na década de 1980. Ele fornece um método seguro para autenticar usuários e serviços em uma rede, garantindo que apenas usuários autorizados tenham acesso aos recursos.
 
-![Kerberos Flow](https://www.kerberos.org/images/krbmsg.gif)
+![Kerberos Flow, o cliente ao tentar acessar um recurso ele irá obter os tickets necessários no TGS qual irá apresentar ao servidor da aplicação ](https://www.kerberos.org/images/krbmsg.gif)
 
 A autenticação Kerberos é um processo de várias etapas que envolve os seguintes componentes:
 
@@ -175,9 +175,9 @@ Fontes:
 
 A autenticação moderna é um termo guarda-chuva que engloba uma combinação de métodos de autenticação e autorização entre um cliente e um recurso, juntamente com medidas de segurança baseadas em políticas de acesso. 
 
-[![Watch the video](https://img.youtube.com/vi/7_vxnHiUA1M/hqdefault.jpg)](https://www.youtube.com/embed/7_vxnHiUA1M)
+[![Vídeo sobre o processo de autenticação moderna apresentado pelo Sahil Malik - Identity Program Manager na Microsoft](https://img.youtube.com/vi/7_vxnHiUA1M/hqdefault.jpg)](https://www.youtube.com/embed/7_vxnHiUA1M)
 
-Iremos aboardar nas demais seções os protocolos que estão dentro desse termo como:
+Iremos abordar nas demais seções os protocolos que estão dentro desse termo como:
 
 [SAML](https://docs.oasis-open.org/security/saml/v2.0/saml-core-2.0-os.pdf)
 
